[功能]第六週作業
